Fixing alignment of labels and values in adjustable width layout.

--- a/static/stylesheets/styles.css
+++ b/static/stylesheets/styles.css
@@ -483,3 +483,6 @@ div.sidebar {
 	background-color: #ffffcc;
 }
 
+td.label_col {
+	width: 130px;
+}
